k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: face-recognition
  labels:
    name: face-recognition
    environment: base
