k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: face-recognition
  labels:
    app: ai-f-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: grpc
      port: 50051
      targetPort: 50051
  selector:
    app: ai-f-backend
